--- a/sai.css
+++ b/sai.css
@@ -25,6 +25,7 @@ img {
 	margin-top: 10px;
 	float: left;
 }
+/* -------------------------------------------------sec1------------------------- */
 .head nav {
 	/*! margin-left: 22px; */
 	margin-left: 15px;/*! padding-left: 11px; *//*! margin-right: 9px; */
